--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,16 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
-title: Phantom
-email: your-email@domain.com
-phone: 012-345-6789
-copyright: Copyright Owner
-tagline: This is Phantom, a free, fully responsive site<br />template designed by <a href="http://html5up.net">HTML5 UP</a>.
+title: School of Data Switzerland
+email: info@schoolofdata.ch
+tagline: School of Data Schweiz will den Umgang mit und das Verständnis von Daten fördern.
 description: > # this means to ignore newlines until "baseurl:"
-  Etiam quis viverra lorem, in semper lorem.
-  Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam.
-  Lorem ipsum dolor sit amet nullam dolore.
-baseurl: "/html5up-phantom" # the subpath of your site, e.g. /blog
-url: "https://lufevida.github.io" # the base hostname & protocol for your site
-twitter: username
-facebook: username
-instagram: username
-dribbble: username
-github: username
-500px: username
+  Wir bieten Unterstützung online über unser Forum und organisieren projektbasierte Workshops.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://schoolofdata.ch" # the base hostname & protocol for your site
+twitter: schoolofdata
+facebook: schoolofdata
+github: schoolofdata-swiss
 
 # Build settings
 markdown: kramdown
+sass:
+  sass_dir: sass
