--- a/_config.yml
+++ b/_config.yml
@@ -22,19 +22,19 @@ de:
     send: Senden
 fr:
   title: School of Data Switzerland
-  tagline: L'École de données promouvoit l'utilisation et la compréhension des données en Suisse.
+  tagline: L'École des données promeut l'utilisation et la compréhension des données en Suisse.
   description: >
-    Nous assistons sur <a href="https://forum.schoolofdata.ch">notre forum</a>
-    et organisons <a href="#signup">les ateliers</a> axés sur vos projets.
+    Nous vous assistons sur <a href="https://forum.schoolofdata.ch">notre forum</a>
+    et organisons <a href="#signup">des ateliers</a> adaptés à vos projets.
   signup:
     title: Ça m'interesse!
     header: J'inscris ...
     myself: moi-même
     myorg: mon organisation
     org: Organisation
-    name: Name
+    name: Nom
     email: E-mail
-    comment: D'autres questions ou souhaites?
+    comment: Des questions ou des souhaits?
     skills: Je peux ..
     beginner: remplir des formulaires
     intermediate: connecter les tables
