Fix language switcher

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Language-specific strings
 de:
-  title: School of Data Switzerland
+  title: School of Data Schweiz
   tagline: School of Data Schweiz will den Umgang mit und das Verständnis von Daten fördern.
   description: >
     Wir bieten Unterstützung online über <a href="https://forum.schoolofdata.ch">unser Forum</a>
-    und organisieren projektbasierte <a href="#signup">Workshops</a>.
+    und organisieren projektbasierte <a href="#contact">Workshops</a>.
   signup:
     title: Interessiert!
     header: Ich melde ...
@@ -21,11 +21,11 @@ de:
     expert: Linked Data nutzen
     send: Senden
 fr:
-  title: School of Data Switzerland
+  title: L'École de données Suisse
   tagline: L'École de données promouvoit l'utilisation et la compréhension des données en Suisse.
   description: >
     Nous assistons sur <a href="https://forum.schoolofdata.ch">notre forum</a>
-    et organisons <a href="#signup">les ateliers</a> axés sur vos projets.
+    et organisons <a href="#contact">les ateliers</a> axés sur vos projets.
   signup:
     title: Ça m'interesse!
     header: J'inscris ...
@@ -47,7 +47,7 @@ en:
   tagline: The School of Data supports the usage and understanding of data in Switzerland.
   description: >
     We provide support <a href="https://forum.schoolofdata.ch">on our forum</a>
-    and organise project-based <a href="#signup">workshops</a>.
+    and organise project-based <a href="#contact">workshops</a>.
   signup:
     title: I'm interested!
     header: Signing up ...
