--- a/_config.yml
+++ b/_config.yml
@@ -65,6 +65,7 @@ en:
     send: Send
 
 # Site links
+title: School of Data Switzerland
 url: "https://schoolofdata.ch"
 email: info@schoolofdata.ch
 twitter: schoolofdata
