school of data switzerland supports...

--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ fr:
 
 en:
   title: School of Data Switzerland
-  tagline: The School of Data supports the usage and understanding of data in Switzerland.
+  tagline: The School of Data Switzerland supports the usage and understanding of data.
   description: >
     We provide support <a href="https://forum.schoolofdata.ch">on our forum</a>
     and organise project-based <a href="#info">workshops</a>:
