--- a/_config.yml
+++ b/_config.yml
@@ -76,6 +76,7 @@ url: "https://schoolofdata.ch"
 email: info@schoolofdata.ch
 forum: "https://forum.schoolofdata.ch"
 twitter: schoolofdata_ch
+calendar: https://forum.schoolofdata.ch/t/upcoming-events/40
 facebook: schoolofdata
 github: schoolofdata-ch
 grecaptcha:
