--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,9 @@ de:
     Eine Arbeitsgruppe von <a href="https://opendata.ch">Opendata.ch</a> - 
     Schweizer Chapter von <a href="https://okfn.org">Open Knowledge</a> -
     um die Nutzung und das Verständnis von Daten zu fördern.
-    Unsere aktuelle Aktivitäten und Online-Unterstützung gibt es in <a href="https://forum.opendata.ch">unserem Forum</a> und auf die <a href="https://opendata.ch">Website des Vereins</a> zu finden.
+    Mehr Unterstützung gibt es in 
+    <a href="https://forum.opendata.ch">unserem Forum</a> und auf die 
+    <a href="https://opendata.ch">Website des Vereins</a> zu finden.
   current:
     calendar: Kalender
     title: Projekte
@@ -32,7 +34,8 @@ fr:
     Un groupe de travail d'<a href="https://opendata.ch">Opendata.ch</a> - 
     Chapitre en Suisse de <a href="https://okfn.org">Open Knowledge</a> - 
     pour soutenir l'utilisation et la compréhension des données.
-    Pour les activités en cours et le soutien en ligne, veuillez consulter <a href="https://forum.opendata.ch">notre forum</a> et notre <a href="https://opendata.ch">site principal</a>.
+    Pour obtenir de l'aide, veuillez consulter <a href="https://forum.opendata.ch">notre forum</a> et le 
+    <a href="https://opendata.ch">site principal</a> de l'association.
   current:
     calendar: Calendrier
     title: Projets
@@ -59,8 +62,8 @@ en:
     This is a working group of <a href="https://opendata.ch">Opendata.ch</a> - 
     Swiss chapter of <a href="https://okfn.org">Open Knowledge</a> - 
     to support the usage and understanding of data.
-    For current activities and online support please visit <a href="https://forum.opendata.ch">forum.opendata.ch</a>
-    and main <a href="https://opendata.ch">website</a>.
+    For online support, please visit <a href="https://forum.opendata.ch">our forum</a>
+    and <a href="https://opendata.ch">main website</a> of the association.
   current:
     calendar: Calendar
     title: Projects
